# Crop_Disease_Identifier

./: .gitignore  .replit  DEPLOYMENT.md  LICENSE  README.md  app.py  create_model.py  knowledge_base.json  pyproject.toml  requirements.txt
static/: index.html  manifest.json  sw.js
static/css/: style.css
static/js/: app-farmer.js  app.js  offline.js  online.js  preprocess.js  storage.js
